--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest",
-    "@types/kurento-client": "^6.14.13"
+    "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/kurento-client": "^6.14.13",
     "kurento-client": "^7.0.0",
     "socket.io": "^4.7.5"
   }
